# icat-rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  imgutil.rs  lib.rs  main.rs  term.rs
src/display/: image.rs  mod.rs
src/display/archive/: mod.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
src/display/markdown/: fonts.rs  mod.rs
src/display/markdown/markie/: layout.rs  math.rs  mod.rs  xml.rs
src/display/markdown/markie/mermaid/: flowchart.rs  layout.rs  mod.rs  parser.rs  render.rs  types.rs
src/display/markdown/math/: mod.rs
src/display/markdown/mermaid/: mod.rs
src/display/pdf/: mod.rs
src/kitty/: diacritics.rs  mod.rs
tests/: cli.rs
